--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "./layout/header.scss";
 @import "./layout/footer.scss";
 @import "./views/about.scss";
-@import "./views/projecs.scss";
-@import "./views/resume.scss";
+@import "./views/proyectos.scss";
+@import "./views/resumen.scss";
 
 
