--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,10 +1,10 @@
-@import "./utilities/variables.scss";
-@import "./base/reset.scss";
-@import "./utilities/components.scss";
-@import "./layout/header.scss";
-@import "./layout/footer.scss";
-@import "./views/about.scss";
-@import "./views/proyectos.scss";
-@import "./views/resumen.scss";
+@import "./utilities/_variables.scss";
+@import "./base/_reset.scss";
+@import "./utilities/_components.scss";
+@import "./layout/_header.scss";
+@import "./layout/_footer.scss";
+@import "./views/_about.scss";
+@import "./views/_proyectos.scss";
+@import "./views/_resumen.scss";
 
 
